# audio-qa-agent

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
src/: __main__.py  api.py  cli.py  pipeline.py  platform_specs.py
src/analyzers/: clipping.py  loudness.py  silence.py
src/engine/: rules.py
src/models/: report.py
src/remediation/: loudness.py  silence.py
src/static/: index.html
src/utils/: audio_io.py
tests/: conftest.py  test_clipping.py  test_loudness.py  test_pipeline.py  test_rules.py  test_silence.py
