[project]
name = "audio-qa-agent"
version = "0.1.0"
description = "Autonomous audio QA agent for music distribution"
requires-python = ">=3.10"
dependencies = [
    "pyloudnorm>=0.1.1",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
